<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Lexify</string>
    <string name="hello_blank_fragment" tools:ignore="MissingTranslation">Hello blank fragment</string>
    <string name="newgame">Verbal game</string>
    <string name="computergame" tools:ignore="MissingTranslation">Against Computer</string>
    <string name="options">Settings</string>
    <string name="Languages">Language</string>
    <string name="Chronometer">Chronometer</string>
    <string name="changelanguages">Change the language </string>
    <string name="AboutGame">About</string>
    <string name="Header">About Lexify</string>
    <string name="MyAccount">My Account</string>
    <string name="Disconnect">Disconnect</string>
    <string name="Instructins">Take the phone and try to make your partner guess the mystery word only by using one clue at a time !</string>
    <string name="Itsyourturn">It\'s your turn !</string>
    <string name="rule">Rules</string>
    <string name="rules">Correct proposition : + 1 point\nWord not found : - 5 points \n\n\n</string>
    <string name="aboutrules">
        "\nRules\n\n4 rounds\n2 players\n4 words per game\n"
        "1 word per round\n\n"
        "A player makes his partner guess the mystery word with one clue at a time.\n\n"
        "The clue must not have the same base \n"
        "Example of a forbidden clue : \nMystery word : Camion \nClue : Camionette \n\n"
        "Correct proposition : +1 point\n"
        "Word not found : -5 points\n\n"
        "The game starts with a score of 10 points."
    </string>
    <string name="start">Start</string>
    <string name="aboutapplication">
        "\nLexify, the mobile game that LEXIFY your vocabulary.\n\n"
        "Inspired from tv show Mot de Passe on the french channel France 2, "
        "Lexify's goal is either to guess or make guess a mystery word."
        "\n\nMail : lexifyapp@gmail.com\n\n"
        "Authors: \n\n KHATIR Nassim\nNAYET Lucas\nPIOT Nicolas \nABDULWAHAB Hani"
    </string>
    <string name="aboutcomputergame" tools:ignore="MissingTranslation">
        "Rules of the game against the computer: guess a word.\n\n"
        "4 rounds\n4 words suggested to guess by turn.\n\n"
        "For each round, the computer selects a word and 4 synonyms.\n"
        "These are randomly selected.\n"
        "The user must guess the word from the proposed synonyms.\n\n"
        "Playable mode with or without timer adjustable in options.\n\n"
    </string>
    <string name="aboutwordsmemory" tools:ignore="MissingTranslation">
        "Rules of the word memory game : \n\n"
        "The goal of the game is to make your memory work.\n\n"
        "With each proposed word, you must remember whether it was seen previously or not.\n\n"
        "If you're wrong, it's a lost life or stopping the game if you do not have any more life.\n\n"
        "Ability to play with the mode lives (3 lives) or not.\n\n"
        "4 steps are available: \n"
        "25 words, 50 words, 100 words or no limit (so the number to reach is that of the database).\n"
    </string>
    <string name="Changeplayersnames">Players names</string>
    <string name="ChooseWords">Choose words</string>
    <string name="yourturn">Your turn, make your partner guess this word !</string>
    <string name="round">Round</string>
    <string name="score">Score</string>
    <string name="correct">True !\n+1</string>
    <string name="wrong">False !\n-1</string>
    <string name="pass">Pass\n-5</string>
    <string name="resultscongrats">It\'s finish ! You made a total score of :</string>
    <string name="name">Players</string>
    <string name="Foundword">Found words</string>
    <string name="Password">Passed words</string>
    <string name="NotFoundWords">Words not found</string>
    <string name="retry">Retry</string>
    <string name="Mainmenu">Main menu</string>
    <string name="submit">Validate</string>
    <string name="Selectlanguge" tools:ignore="MissingTranslation">Select the language</string>
    <string name="level">Level</string>
    <string name="off">Timer OFF</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="enter_names">Please enter players names</string>
    <string name="choose_words">Please choose 4 words</string>
    <string name="computergameturn" tools:ignore="MissingTranslation">It\'s computer turn !</string>
    <string name="cg_win" tools:ignore="MissingTranslation">You won !</string>
    <string name="cg_lose" tools:ignore="MissingTranslation">"You lost ! The word to guess was "</string>
    <string name="word" tools:ignore="MissingTranslation">Word</string>
    <string name="found" tools:ignore="MissingTranslation">Found</string>
    <string name="computerresults" tools:ignore="MissingTranslation">I\'ts finish ! Number of found words :</string>
    <string name="yes" tools:ignore="MissingTranslation">Yes</string>
    <string name="no" tools:ignore="MissingTranslation">No</string>
    <string name="computerinstructions" tools:ignore="MissingTranslation">Play against computer :\nguess a word</string>
    <string name="computerrules" tools:ignore="MissingTranslation">
        "The computer picks a word and tries to make it guess by giving a synonym for it.\n"
        "You have to enter the word you think in the dialog box.\n"
        "The computer gives up to 4 synonyms.\n"
        "After 4 false proposals, the round is lost.\n"
    </string>
    <string name="nextround" tools:ignore="MissingTranslation">Next round</string>
    <string name="abandon" tools:ignore="MissingTranslation">Abandon</string>
    <string name="statistics" tools:ignore="MissingTranslation">See statistics</string>
    <string name="editprofile" tools:ignore="MissingTranslation">Edit Profile</string>
    <string name="signup" tools:ignore="MissingTranslation">Sign Up</string>
    <string name="enterinformation" tools:ignore="MissingTranslation">Welcome !\n To use the app, you\'ll need to fill these infos.\n It\'s a one time thing !</string>
    <string name="password" tools:ignore="MissingTranslation">Password</string>
    <string name="confirmpassword" tools:ignore="MissingTranslation">Confirm password</string>
    <string name="noaccount" tools:ignore="MissingTranslation">No Account ?</string>
    <string name="login" tools:ignore="MissingTranslation">Login</string>
    <string name="welcome" tools:ignore="MissingTranslation">"Welcome "</string>
    <string name="nofindaccount" tools:ignore="MissingTranslation">"Can't find this account, please check if the informations you entered are correct"</string>
    <string name="enterpassword" tools:ignore="MissingTranslation">"Please enter your password\n"</string>
    <string name="enterpseudo" tools:ignore="MissingTranslation">"Please enter your pseudo\n"</string>
    <string name="SucessConnexion" tools:ignore="MissingTranslation">You are connected</string>
    <string name="wrongformatpseudo" tools:ignore="MissingTranslation">Wrong pseudo format\n</string>
    <string name="wrongformatemail" tools:ignore="MissingTranslation">Wrong email format\n</string>
    <string name="passwordsnomatch" tools:ignore="MissingTranslation">Passwords do not match\n</string>
    <string name="limitspassword" tools:ignore="MissingTranslation">"Password must have at least 4 characters and at most 36 characters\n"</string>
    <string name="choosepseudo" tools:ignore="MissingTranslation">"You must choose a pseudo\n"</string>
    <string name="enteremail" tools:ignore="MissingTranslation">"You must enter an email\n"</string>
    <string name="mustpassword" tools:ignore="MissingTranslation">"You must enter password\n"</string>
    <string name="mustconfirmpassword" tools:ignore="MissingTranslation">"You must confirm password\n"</string>
    <string name="pseudoalreadyexist" tools:ignore="MissingTranslation">"Pseudo already exist\n"</string>
    <string name="emailalreadyused" tools:ignore="MissingTranslation">Email already used\n</string>
    <string name="youraccount" tools:ignore="MissingTranslation">"Your account "</string>
    <string name="hasbeencreated" tools:ignore="MissingTranslation">" has been created"</string>
    <string name="SuccessDeconnexion" tools:ignore="MissingTranslation">You are disconnected</string>
    <string name="Seeprofile" tools:ignore="MissingTranslation">See Profile</string>
    <string name="wordsfound" tools:ignore="MissingTranslation">Words found</string>
    <string name="wordsmadeguess" tools:ignore="MissingTranslation">Words made guess</string>
    <string name="seen" tools:ignore="MissingTranslation">Seen</string>
    <string name="notseen" tools:ignore="MissingTranslation">Not seen</string>
    <string name="alreadyseen" tools:ignore="MissingTranslation">Lost ! This word had already been seen !</string>
    <string name="notalreadyseen" tools:ignore="MissingTranslation">Lost ! This word had never been seen !</string>
    <string name="questionmeetword" tools:ignore="MissingTranslation">Have you ever met this word ?</string>
    <string name="wordsmemory" tools:ignore="MissingTranslation">Words Memory</string>
    <string name="accessgames" tools:ignore="MissingTranslation">Access Games</string>
    <string name="quitgames" tools:ignore="MissingTranslation">Quit Games</string>
    <string name="friendCode" tools:ignore="MissingTranslation">Friend Code</string>
    <string name="lexifypresentation" tools:ignore="MissingTranslation">Presentation</string>
    <string name="steps" tools:ignore="MissingTranslation">Step</string>
    <string name="nosteps" tools:ignore="MissingTranslation">No Step</string>
    <string name="livesleft" tools:ignore="MissingTranslation">Live left : x</string>
    <string name="life" tools:ignore="MissingTranslation">Lives</string>
    <string name="nolife" tools:ignore="MissingTranslation">No lives</string>
    <string name="lives" tools:ignore="MissingTranslation">Life</string>
    <string name="lexicalfields" tools:ignore="MissingTranslation">Lexical Fields</string>
    <string name="questionlexicalfield" tools:ignore="MissingTranslation">What is the lexical field associated with these words ?</string>
    <string name="lexical_win" tools:ignore="MissingTranslation">Congratulations !</string>
    <string name="lexical_fail" tools:ignore="MissingTranslation">Lost ! The lexical field was </string>

</resources>