<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="parisnanterre.fr.lexify.application.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:text="@string/accessgames"
            android:id="@+id/fragment_main_btn_play_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttonshape"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            />

        <Button
            android:id="@+id/fragment_main_btn_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttonshape"
            android:text="@string/options"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            />


        <Button
            android:id="@+id/fragment_main_btn_about_game"
            android:text="@string/AboutGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttonshape"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            />

        <Button
            android:id="@+id/fragment_main_btn_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttonshape"
            android:textSize="18sp"
            android:text="@string/MyAccount" />

        <Button
            android:id="@+id/fragment_main_btn_see_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttonshape"
            android:textSize="18sp"
            android:text="@string/Seeprofile" />

    </LinearLayout>

</FrameLayout>
