<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_color">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_playing_lil_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/activity_playing_txt_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            />

        <Button
            android:id="@+id/activity_playing_btn_disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Disconnect" />

    </LinearLayout>

    <ImageView
        android:id="@+id/activity_playing_logo"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:src="@drawable/lexifylogo512"
        android:scaleType="fitXY"/>

    <Button
        android:text="@string/newgame"
        android:id="@+id/activity_playing_btn_play_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonshape"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        />

    <Button
        android:text="@string/computergame"
        android:id="@+id/activity_playing_btn_computer_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonshape"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        />

    <Button
        android:id="@+id/activity_playing_btn_words_memory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonshape"
        android:text="@string/wordsmemory"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        />

    <Button
        android:id="@+id/activity_playing_btn_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonshape"
        android:text="@string/Mainmenu"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        />


</LinearLayout>