<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color">

    <ImageView
        android:id="@+id/signin_img_logo"
        android:layout_width="155dp"
        android:layout_height="155dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        app:srcCompat="@mipmap/logo"
        android:scaleType="fitXY"/>

    <TextView
        android:id="@+id/signin_txt_infos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:text="@string/enterinformation" />

    <TextView
        android:id="@+id/signin_txt_errors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#F00"
        android:layout_marginLeft="20dp"
        android:text="" />

    <EditText
        android:id="@+id/signin_edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Pseudo" />

    <EditText
        android:id="@+id/signin_edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <Button
        android:id="@+id/signin_btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:onClick="SignIn"
        android:padding="12dp"
        android:text="@string/login"
        android:background="@drawable/buttonshape"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/signin_txt_noaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:text="@string/noaccount" />

        <Button
            android:id="@+id/signin_btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"
            android:padding="12dp"
            android:text="@string/signup"
            android:background="@drawable/buttonshape"/>

        </LinearLayout>


</LinearLayout>