<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_computer_game_start"
    android:background="@drawable/background_color"
    tools:context="parisnanterre.fr.lexify.computergame.ComputerGameStartFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/fragment_computer_game_start_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/computergame"
            android:textAppearance="@style/VerbalGameSigning"/>


        <TextView
            android:id="@+id/fragment_computer_game_start_instructions"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/computerinstructions"
            android:textAppearance="@style/VerbalGameInstructions"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:layout_marginStart="-12dp"
            android:layout_gravity="center"
            >

            <ImageView
                android:layout_width="130dp"
                android:layout_height="120dp"
                android:layout_marginStart="130dp"
                android:src="@drawable/computer_icon"/>

        </LinearLayout>

        <TextView
            android:id="@+id/fragment_computer_game_start_rules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/computerrules"
            android:textAppearance="@style/VerbalGameRules"/>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/fragment_computer_game_strat_btn_play_game"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start"
                android:background="@drawable/buttonshape"
                />

        </LinearLayout>


    </LinearLayout>


</FrameLayout>