<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundBlue">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_main_lil_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/activity_main_txt_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <Button
            android:id="@+id/activity_main_btn_disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Disconnect" />


    </LinearLayout>


    <TextView
        android:id="@+id/activity_main_title_lexify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="LEXIFY"
        android:textAlignment="center"
        android:textAppearance="@style/LexifyTitleStyle" />

    <Button
        android:text="@string/newgame"
        android:id="@+id/activity_main_btn_play_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/buttonshape"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/activity_main_btn_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/buttonshape"
        android:text="Settings"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/activity_main_btn_about_game"
        android:text="@string/AboutGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/buttonshape"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/activity_main_btn_options"
        android:text="@string/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/buttonshape"
        android:textSize="25dp"
        />

    <Button
        android:id="@+id/activity_main_btn_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/MyAccount" />


</LinearLayout>
